[project]
name = "lrt_wallbox"
version = "0.2.0"
description = "A Python client for interacting with LRT Wallbox devices via HTTP API."
keywords = ["wallbox", "ev", "ocpp", "api", "lrt", "aeg"]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Kacper", email = "8o9tddfam@mozmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
# NOTE: keep these as lower-bound (>=) ranges, not exact (==) pins. Home Assistant
# bundles and constrains cryptography/requests to its own versions, so an exact pin
# (e.g. cryptography==45.0.3) makes the uv resolver fail when HA ships a newer one
# (HA 2026.6 ships cryptography 48.0.0). The APIs used here are stable across these.
dependencies = [
    "cbor2>=5.6.5",
    "requests>=2.32.0",
    "cryptography>=45.0.3",
    #    "bleak==1.0.1"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/Upgreydd/lrt_wallbox"
Repository = "https://github.com/Upgreydd/lrt_wallbox"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lrt_wallbox", "lrt_wallbox.msg_types"]

# Ship the PEP 561 marker so downstreams (e.g. the Home Assistant integration,
# mypy) get type information. No other data files are packaged — in particular
# *.pem keys generated at runtime must never end up in the wheel.
[tool.setuptools.package-data]
lrt_wallbox = ["py.typed"]
